--- a/game.html
+++ b/game.html
@@ -30,9 +30,10 @@
 
     <script>
         function logout() {
-            window.location.href = "login.html";
+            window.location.href = "index.html";
         }
     </script>
 
 </body>
 </html>
+
